[build-system]
requires = ["setuptools>=61.0"]

[project]
name = "sceptre-cloudformation-package-handler"
version = "0.1.1"
authors = [
  { name="Trinopoty Biswas", email="trinopoty@outlook.com" },
]
description = "A template handler for cloudformation package command."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/trinopoty/sceptre-cloudformation-package-handler"
Issues = "https://github.com/trinopoty/sceptre-cloudformation-package-handler/issues"
